contact/client shift fixed changed our story and contact/client width to --content-width

--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,13 @@ nav ul li {
     text-decoration: none;
 }
 
+.content-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
 /*logo*/
 .tajam-logo {
     display: inline-grid;
@@ -231,9 +238,14 @@ header #line {
 
 #our-story {
     height: 60vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
 }
 
 #story-readable {
+    width: var(--content-width);
     height: 42%;
     display: flex;
     justify-content: center;
@@ -241,7 +253,7 @@ header #line {
 }
 
 #story-text {
-    max-width: 55%;
+    width: 60%;
     height: 100%;
     flex-grow: 1;
     display: flex;
@@ -250,30 +262,25 @@ header #line {
     align-items: flex-start;
 }
 
-#story-text h2 {
-    padding: 1em 0.25em;
-}
+#story-text h2 {}
 
 #story-text p {
-    font-family: sans-serif;
-    font-size: 0.7vw;
-    padding: 1em;
-    padding-right: 40%;
+    padding: 1rem 0;
     line-height: 160%;
 }
 
 #big-logo {
+    width: 40%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
     flex-grow: 1;
     height: 100%;
 }
 
 #big-logo img {
-    margin: 5%;
-    width: auto;
-    height: 60%;
+    width: 60%;
+    height: auto;
 }
 
 #story-watch {
@@ -284,6 +291,7 @@ header #line {
     align-items: center;
     justify-content: center;
     height: 58%;
+    width: 100%;
 }
 
 #story-watch div {
@@ -476,6 +484,8 @@ header #line {
 #contact {
     display: flex;
     height: 43vw;
+    width: var(--content-width);
+
 }
 
 #contact-container {
@@ -487,15 +497,15 @@ header #line {
 }
 
 #contact-container h2 {
-    width: 60%;
     padding-top: 16%;
     padding-bottom: 2.5%;
+    width: 100%;
 }
 
 #contact-formular {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 100%;
 }
 
 .contact-input {
@@ -512,32 +522,32 @@ header #line {
 #client-container h2 {
     padding-left: 10%;
     padding-top: 16%;
-    padding-bottom: 2.5%;
+    width: 100%;
 }
 
 #client-grid-container {
-    height: auto;
-    padding-left: 10%;
-    padding-right: 40%;
+    width: 100%;
+    margin-left: 10%;
+    height: 65%;
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 0.5fr 0.5fr 0.5fr 0.5fr 0.5fr;
-    column-gap: 20%;
-    row-gap: 0;
+    grid-template-columns: 45% 45%;
+    grid-auto-rows: 16%;
+    column-gap: 10%;
+    row-gap: 5%;
 }
 
 .client-grid-item {
-    height: 50%;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 5%;
+    border: 1px solid green;
 }
 
 .client-grid-item img {
-    height: 100%;
-    width: 100%;
+    flex-grow: 1;
+    max-width: 80%;
+    max-height: 80%;
 }
 
 /*footer*/
